DPC-439: Checksum and file lengths are wired in to the Data Resource and Job Resource.
I think things are working correctly, but it looks like the content length size is a bit wonky, I think it's because Jersey is resetting the values.